--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@tinymce/tinymce-react": "^3.12.6",
+		"@types/firebase": "^3.2.1",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.1",
+		"@types/react": "^17.0.30",
+		"@types/react-dom": "^17.0.9",
 		"babel-jest": "^26.6.0",
 		"dompurify": "^2.3.0",
 		"firebase": "^8.6.7",
@@ -27,7 +32,8 @@
 		"react-scripts": "4.0.3",
 		"react-window": "^1.8.6",
 		"redux-devtools-extension": "^2.13.9",
-		"redux-saga": "^1.1.3"
+		"redux-saga": "^1.1.3",
+		"typescript": "^4.4.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
