--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"@tinymce/tinymce-react": "^3.12.6",
 		"@types/firebase": "^3.2.1",
+		"@types/gapi.client": "^1.0.5",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.1",
 		"@types/react": "^17.0.30",
@@ -57,5 +58,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/history": "^4.7.9"
 	}
 }
