--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@tinymce/tinymce-react": "^3.12.6",
-		"@types/firebase": "^3.2.1",
-		"@types/gapi.client": "^1.0.5",
-		"@types/jest": "^27.0.2",
-		"@types/node": "^16.11.1",
-		"@types/react": "^17.0.30",
-		"@types/react-dom": "^17.0.9",
 		"babel-jest": "^26.6.0",
 		"dompurify": "^2.3.0",
 		"firebase": "^8.6.7",
@@ -60,6 +54,14 @@
 		]
 	},
 	"devDependencies": {
-		"@types/history": "^4.7.9"
+		"@types/history": "^4.7.9",
+		"@types/firebase": "^3.2.1",
+		"@types/gapi.client": "^1.0.5",
+    "@types/gapi.auth2": "0.0.55",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.1",
+		"@types/react": "^17.0.30",
+		"@types/react-dom": "^17.0.9",
+		"@types/gapi.client.gmail": "^1.0.3"
 	}
 }
