--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@tinymce/tinymce-react": "^3.12.6",
+		"@types/material-ui": "^0.21.12",
 		"babel-jest": "^26.6.0",
 		"dompurify": "^2.3.0",
 		"firebase": "^8.6.7",
@@ -54,14 +55,15 @@
 		]
 	},
 	"devDependencies": {
-		"@types/history": "^4.7.9",
 		"@types/firebase": "^3.2.1",
+		"@types/gapi.auth2": "0.0.55",
 		"@types/gapi.client": "^1.0.5",
-    "@types/gapi.auth2": "0.0.55",
+		"@types/gapi.client.gmail": "^1.0.3",
+		"@types/history": "^4.7.9",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.1",
 		"@types/react": "^17.0.30",
 		"@types/react-dom": "^17.0.9",
-		"@types/gapi.client.gmail": "^1.0.3"
+		"@types/react-router-dom": "^5.3.1"
 	}
 }
