--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@tinymce/tinymce-react": "^3.12.6",
+		"@types/react-router": "^5.1.17",
 		"babel-jest": "^26.6.0",
 		"dompurify": "^2.3.0",
 		"firebase": "^8.6.7",
@@ -21,7 +22,7 @@
 		"memorize-one": "0.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-email-editor": "^1.3.0",
+		"react-email-editor": "^1.4.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
@@ -60,11 +61,11 @@
 		"@types/gapi.client.gmail": "^1.0.3",
 		"@types/history": "^4.7.9",
 		"@types/jest": "^27.0.2",
+		"@types/material-ui": "^0.21.12",
 		"@types/node": "^16.11.1",
 		"@types/react": "^17.0.30",
 		"@types/react-dom": "^17.0.9",
-		"@types/react-router-dom": "^5.3.1",
-		"@types/material-ui": "^0.21.12",
-		"@types/react-email-editor": "^1.1.2"
+		"@types/react-email-editor": "^1.1.2",
+		"@types/react-router-dom": "^5.3.2"
 	}
 }
